# crazy-bear

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  __main__.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
arduino_core/: arduino_core.ino  sketch.fzz
arduino_viewer/: arduino_viewer.ino
hardware/arduino/core/: core.ino  radio_manager  radio_transmitter
hardware/arduino/radio_manager/: config.hh  radio_manager.cpp  radio_manager.hh
hardware/arduino/radio_transmitter/: config.hh.tpl  radio_transmitter.cpp  radio_transmitter.hh
hardware/arduino/viewer/: viewer.ino
libs/: __init__.py
libs/camera/: base.py  fps.py
libs/camera/tests/: test_fps_tracker.py
libs/casual_utils/: aio.py  logging.py  parallel_computing.py  time.py  version_manager.py
libs/image_processing/: motion_detector.py  test_motion_detector.py  utils.py
libs/messengers/: base.py  events.py  mixins.py  telegram.py  utils.py
libs/smart_devices/: base.py  constants.py
libs/task_queue/: __init__.py  base.py  dto.py  exceptions.py  middlewares.py
libs/task_queue/implementation/: thread.py
libs/zigbee/: __init__.py  base.py  constants.py  devices.py  exceptions.py
libs/zigbee/lamps/: life_control.py
libs/zigbee/motion_sensors/: tuya.py
libs/zigbee/temperature_sensor/: tuya.py
libs/zigbee/water_leak_sensor/: aqara.py
project/: conftest.py
project/apps/arduino/: base.py  constants.py  models.py
project/apps/arduino/tests/: test_arduino_connector.py
project/apps/bot_implementation/: constants.py  events.py  utils.py
project/apps/bot_implementation/handlers/: __init__.py  arduino.py  auto_security.py  camera.py  menu.py  other.py  report.py  router.py
project/apps/common/: base.py  camera.py  constants.py  doc.py  events.py  exceptions.py  fps.py  interface.py  models.py  state.py  storage.py  threads.py  tplink.py  types.py  utils.py
project/apps/common/routers/: mi.py  tplink.py  utils.py
project/apps/common/tests/: test_fps_tracker.py  test_state.py  test_thread_pool.py  test_utils.py
project/apps/core/: base.py  commander.py  constants.py  events.py
project/apps/core/handlers/: __init__.py  arduino.py  auto_security.py  camera.py  menu.py  other.py  report.py  router.py
project/apps/core/modules/: __init__.py  arduino.py  auto_security.py  camera.py  devices.py  extra_commands.py  menu.py  recommendation_system.py  report.py  router.py  security.py  signals.py  smart_alarm_clock.py  smart_lamp_controller.py  utils.py  wifi_devices.py  zigbee.py
project/apps/core/signals/: arduino.py  base.py  cpu_temp.py  door_sensors.py  free_disk_space.py  mixins.py  motion_sensor.py  motion_sensors.py  ram_usage.py  router.py  supreme_handler.py  temp_hum_sensor.py  temp_hum_sensors.py  utils.py  water_leak_sensor.py  water_leak_sensors.py  weather.py
project/apps/core/utils/: messages.py  reports.py  signal_handlers.py  wifi.py
project/apps/db/: base.py
project/apps/devices/: dto.py  utils.py
project/apps/dynamic_config/: events.py  models.py  utils.py
project/apps/guard/: constants.py  motion_detector.py  video_guard.py
project/apps/guard/tests/: test_motion_detector.py  test_video_guard.py
project/apps/messengers/: base.py  commander.py  constants.py  events.py  mixins.py  telegram.py  utils.py
project/apps/signals/: models.py  utils.py
project/apps/task_queue/: __init__.py  base.py  constants.py  dto.py  exceptions.py  middlewares.py
project/apps/task_queue/implementation/: thread.py
project/apps/zigbee/: base.py  constants.py  exceptions.py
project/apps/zigbee/lamps/: life_control.py
project/config/: default.py  utils.py  variables.py
project/config/tests/: test_utils.py
scripts/: docker-cleanup.sh  install.sh  show_temp.sh
zigbee2mqtt-data/: configuration.yaml  configuration.yaml.tpl
