[tool.poetry]
name = "security_guard"
version = "0.1.0"
description = ""
authors = ["expert_m"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.23"
pytz = "^2022.1"
emoji = "^2.0.0"
pyserial = "^3.4"
#opencv-python = { version = "^4.2.0", optional = true }
imutils = "^0.5.3"
numpy = { version = "1.21.5", optional = true }
matplotlib = { version = "=3.5.1", optional = true }
sqlalchemy = "^1.3.23"
sentry-sdk = "^1.0.0"
dropbox = "^11.4.0"
openpyxl = "^3.0.3"
pytest = "^7.0.1"
fire = "^0.4.0"
wheel = "^0.37.0"
pandas = { version = "1.3.5", optional = true }
scipy = { version = "1.8.0", optional = true }
python-dotenv = "^0.20.0"
python-telegram-bot = "^13.8.1"
crontab = "^0.23.0"
psycopg2-binary = { version = "=2.9.2", optional = true }
pika = "^1.2.0"
paho-mqtt = "^1.6.1"
mplcyberpunk = "^0.5.2"
doc = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
heavy = ["numpy", "matplotlib", "pandas", "scipy", "psycopg2-binary"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
