[tool.poetry]
name = "crazy_bear"
version = "0.1.0"
description = ""
authors = ["expert_m"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
pytz = "^2023.3.post1"
emoji = "^2.8.0"
pyserial = "^3.5"
opencv-python = { version = "~4.6.0", optional = true }
imutils = "^0.5.4"
numpy = { version = "~1.24.2", optional = true }
matplotlib = { version = "~3.6.3", optional = true }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
sentry-sdk = "^1.31.0"
dropbox = "^11.36.2"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
wheel = "^0.41.2"
pandas = { version = "~1.5.3", optional = true }
scipy = { version = "~1.10.1", optional = true }
python-dotenv = "^1.0.0"
crontab = "^1.0.1"
psycopg2-binary = { version = "~2.9.6", optional = true }
paho-mqtt = "^1.6.1"
mplcyberpunk = "^0.7.0"
python-telegram-bot = "^20.6"
pika = "^1.3.2"

[tool.poetry.extras]
heavy = ["numpy", "matplotlib", "pandas", "scipy", "psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
#sqlalchemy-stubs = "^0.4"
pika-stubs = "^0.1.3"
types-python-crontab = "^3.0.0.1"
types-paho-mqtt = "^1.6.0.7"
types-requests = "^2.31.0.8"
types-pytz = "^2023.3.1.1"
numpy-stubs = {git = "https://github.com/numpy/numpy-stubs"}
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
