[tool.poetry]
name = "crazy_bear"
version = "0.1.0"
description = ""
authors = ["expert_m"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytz = "^2024.1"
emoji = "^2.8.0"
pyserial = "^3.5"
opencv-python = { version = "~4.6.0", optional = true }
imutils = "^0.5.4"
numpy = { version = "~1.26.4", optional = true }
matplotlib = { version = "~3.8.3", optional = true }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.21" }
sentry-sdk = "^2.13.0"
dropbox = "^12.0.2"
openpyxl = "^3.1.2"
pytest = "^8.0.0"
wheel = "^0.44.0"
pandas = { version = "~2.2.2", optional = true }
scipy = { version = "~1.13.1", optional = true }
python-dotenv = "^1.0.0"
crontab = "^1.0.1"
psycopg2-binary = { version = "~2.9.9", optional = true }
paho-mqtt = "^2.0.0"
mplcyberpunk = "^0.7.0"
python-telegram-bot = "^21.0.1"
pika = "^1.3.2"
environs = "^11.0.0"

[tool.poetry.extras]
heavy = ["numpy", "matplotlib", "pandas", "scipy", "psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"
types-paho-mqtt = "^1.6.0.7"
types-requests = "^2.31.0.8"
types-pytz = "^2024.1.0"
numpy-stubs = { git = "https://github.com/numpy/numpy-stubs" }
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
autoflake = "^2.2.1"
flake8-quotes = "^3.3.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
